# react-wasm-boilerplate

./: .eslintrc  .gitignore  README.md  package-lock.json  package.json  webpack.config.js
src/: index.js
wasm-lib/: Cargo.toml
