[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["Dhairya Nadapara <dhairyanadapara98@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/wasm-lib"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"